@@ -1618,7 +1618,7 @@ if job.output.jacobian.warped
   [y0, dt] = spm_dartel_integrate(reshape(trans.jc.u,[trans.warped.odim(1:3) 1 3]),[1 0], 6);
   clear y0
   N      = nifti;
-  N.dat  = file_array(fullfile(pth,mrifolder,['j_', nam, '.nii']),trans.warped.odim(1:3),...
+  N.dat  = file_array(fullfile(pth,mrifolder,['wj_', nam, '.nii']),trans.warped.odim(1:3),...
              [spm_type('float32') spm_platform('bigend')],0,1,0);
   N.mat  = M1;
   N.mat0 = M1;
